--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,13 @@
   "theme_color": "#4b6cb7",
   "icons": [
     {
-      "src": "./icons/icon-192x192.png",
+      "src": "YounesTracker/icons/icon-192x192.png.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./icons/icon-512x512.png",
+      "src": "YounesTracker/icons/icon-192x192.png.png",
       "sizes": "512x512",
       "type": "image/png"
     }
